5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1602_2049.log
== TEST (2019-03-26 12:38:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print(346)
print(2)
print(346/2)
print(346%2)

-- OUTPUT:
346
2
173.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:39:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1(346)
var2(2)
var3(346/2)
var4(346%2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var1(346)
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:41:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
1*346
1*2
1*346/2
1*346%2

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var1(346)
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:41:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
1*346
1*2
1*346/2
1*346%2

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var1(346)
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 12:41:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
1*346
1*2
1*346/2
1*346%2

-- EXECUTION TIME:
0.154296
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:

-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:

-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:42:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
346
2
346/2
346%2

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var1(346)
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:42:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
346
2
346/2
346%2

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var1(346)
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:43:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
346
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var1(346)
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:43:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
346*1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var1(346)
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 12:43:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
346*1
-- EXECUTION TIME:
0.25719
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:

-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:

-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:43:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=346*1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var1(346)
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 12:43:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=346*1
-- EXECUTION TIME:
0.183179
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:

-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:

-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:44:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=346*1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var1(346)
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:44:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=346*1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var1(346)
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:44:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=346*1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var1(346)
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:44:28) 
-- CODE:
(346*2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var1(346)
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:44:36) 
-- CODE:
print(346*2)
-- OUTPUT:
692
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:45:08) 
-- CODE:
var1=print(346*2)
-- OUTPUT:
692
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:47:13) 
-- CODE:
var1=print (346)
var2=print(2)
-- OUTPUT:
346
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:47:37) 
-- CODE:
var1=print (346)
var2=print(2)
var3=print(346/2)
-- OUTPUT:
346
2
173.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:47:54) 
-- CODE:
var1=print (346)
var2=print(2)
var3=print(346/2)
var4=print(346//2)
-- OUTPUT:
346
2
173.0
173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 12:48:13) 
-- CODE:
var1=print (346)
var2=print(2)
var3=print(346/2)
var4=print(346//2)
-- EXECUTION TIME:
0.197026
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
346
2
173.0
173
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
346
2
173.0
173
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
346
2
173.0
173
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 12:48:46) 
-- CODE:
var1=print (346)
var2=print(2)
var3=print(346/2)
var4=print(346%2)
-- EXECUTION TIME:
0.164973
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
346
2
173.0
0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
346
2
173.0
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
346
2
173.0
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:48:49) 
-- CODE:
var1=print (346)
var2=print(2)
var3=print(346/2)
var4=print(346%2)
-- OUTPUT:
346
2
173.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:49:02) 
-- CODE:
var1=print (346)
var2=print(2)
var3=print(346//2)
var4=print(346%2)
-- OUTPUT:
346
2
173
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 12:49:08) 
-- CODE:
var1=print (346)
var2=print(2)
var3=print(346//2)
var4=print(346%2)
-- EXECUTION TIME:
0.148132
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
346
2
173
0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
346
2
173
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
346
2
173
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:50:02) 
-- CODE:
346=dividendo
2=divisor
var1=print (346)
var2=print(2)
var3=print(346//2)
var4=print(346%2)
-- ERROR:
File "XXXX", line 1
    346=dividendo
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:50:54) 
-- CODE:
dividendo= 346
divisor= 2
var1=print (346)
var2=print(2)
var3=print(346//2)
var4=print(346%2)
-- OUTPUT:
346
2
173
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 12:51:00) 
-- CODE:
dividendo= 346
divisor= 2
var1=print (346)
var2=print(2)
var3=print(346//2)
var4=print(346%2)
-- EXECUTION TIME:
0.165526
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
346
2
173
0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
346
2
173
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
346
2
173
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:51:16) 
-- CODE:
dividendo= 346
divisor= 2
var1=print (dividendo)
var2=print(2)
var3=print(346//2)
var4=print(346%2)
-- OUTPUT:
346
2
173
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 12:54:43) 
-- CODE:
dividendo= 346
divisor= 2
var1=print (dividendo)
var2=print(divisor)
var3=print(346//2)
var4=print(346%2)
-- EXECUTION TIME:
0.165665
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
346
2
173
0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
346
2
173
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
346
2
173
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:12:54) 
-- CODE:
dividendo=346
divisor=2
-- OUTPUT:
346
2
173
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:13:17) 
-- CODE:
dividendo=print(346)
divisor=print(2)
-- OUTPUT:
346
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:14:09) 
-- CODE:
dividendo=print(346)
divisor=print(2)
dividendo=346/2
-- OUTPUT:
346
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:14:23) 
-- CODE:
dividendo=print(346)
divisor=print(2)
dividendo=print(346/2)
-- OUTPUT:
346
2
173.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:14:33) 
-- CODE:
dividendo=print(346)
divisor=print(2)
dividendo=print(346//2)
-- OUTPUT:
346
2
173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:15:18) 
-- CODE:
dividendo=print(346)
divisor=print(2)
quociente=print(dividendo//divisor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quociente=print(dividendo//divisor)
TypeError: unsupported operand type(s) for //: 'NoneType' and 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:19:26) 
-- CODE:
dividendo=346
divisor=2
quociente=print(dividendo//divisor)

-- OUTPUT:
173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:19:53) 
-- CODE:
dividendo=346
divisor=2
dividendo1= print(dividendo)
quociente=print(dividendo//divisor)

-- OUTPUT:
346
173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:20:13) 
-- CODE:
dividendo=346
divisor=2
dividendo1= print(dividendo)
divisor2=print(divisor)
quociente=print(dividendo//divisor)

-- OUTPUT:
346
2
173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:20:38) 
-- CODE:
dividendo=346
divisor=2
dividendo1= print(dividendo)
divisor2=print(divisor)
quociente=print(dividendo//divisor)
resto=print(dividendo%divisor)

-- OUTPUT:
346
2
173
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:20:43) 
-- CODE:
dividendo=346
divisor=2
dividendo1= print(dividendo)
divisor2=print(divisor)
quociente=print(dividendo//divisor)
resto=print(dividendo%divisor)

-- OUTPUT:
346
2
173
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 13:20:47) 
-- CODE:
dividendo=346
divisor=2
dividendo1= print(dividendo)
divisor2=print(divisor)
quociente=print(dividendo//divisor)
resto=print(dividendo%divisor)

-- EXECUTION TIME:
0.202745
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
346
2
173
0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
346
2
173
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
346
2
173
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:30:14) 
-- CODE:
dividendo=346
divisor=2
dividendo1= print(dividendo)
divisor2=print(divisor)
quociente=print(dividendo//divisor)
resto=print(dividendo%divisor)
-- OUTPUT:
346
2
173
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:34:51) 
-- CODE:
X=346
Y=2
dividendo1= print(X)
divisor2=print(Y)
quociente=print(X//Y)
resto=print(X%Y)
-- OUTPUT:
346
2
173
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:33:29) 
-- CODE:
X=346
Y=2
dividendo = print(X)
divisor = print(Y)
quociente = print(X//Y)
resto = print(X%Y)
-- OUTPUT:
346
2
173
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:35:34) 
-- CODE:
X=346
Y=2
dividendo = print((346/2)*2)
divisor = print(Y)
quociente = print(X//Y)
resto = print(X%Y)
-- OUTPUT:
346.0
2
173
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:35:55) 
-- CODE:
X=346
Y=2
dividendo = print((346//2)*2)
divisor = print(Y)
quociente = print(X//Y)
resto = print(X%Y)
-- OUTPUT:
346
2
173
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:36:54) 
-- CODE:
X=346
Y=2
dividendo = print((346//2)*2)
divisor = print(2)
quociente = print(X//Y)
resto = print(X%Y)
-- EXECUTION TIME:
0.120716
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
346
2
173
0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
346
2
173
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
346
2
173
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:36:56) 
-- CODE:
X=346
Y=2
dividendo = print((346//2)*2)
divisor = print(2)
quociente = print(X//Y)
resto = print(X%Y)
-- OUTPUT:
346
2
173
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:49:01) 
-- CODE:
X=346
Y=2
dividendo = print(X//Y)
divisor = print(Y)
quociente = print(X//Y)
resto = print(X%Y)
-- OUTPUT:
173
2
173
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:49:05) 
-- CODE:
X=346
Y=2
dividendo = print(X//Y)
divisor = print(Y)
quociente = print(X//Y)
resto = print(X%Y)
-- EXECUTION TIME:
0.131078
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
173
2
173
0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
173
2
173
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
173
2
173
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:49:14) 
-- CODE:
X=346
Y=2
dividendo = print(X//Y)
divisor = print(Y)
quociente = print(X//Y)
resto = print(X % Y)
-- OUTPUT:
173
2
173
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:49:20) 
-- CODE:
X=346
Y=2
dividendo = print(X//Y)
divisor = print(Y)
quociente = print(X // Y)
resto = print(X % Y)
-- OUTPUT:
173
2
173
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:54:01) 
-- CODE:
input("qual o valor de X ? ")
input(" qual o valor de Y ? ")

-- OUTPUT:
173
2
173
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:02:57) 
-- CODE:
input("qual o valor de X ? ")
input(" qual o valor de Y ? ")
total1= X/Y
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total1= X/Y
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:03:11) 
-- CODE:
input("qual o valor de X ? ")
input(" qual o valor de Y ? ")
total= X/Y
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total= X/Y
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:58:16) 
-- CODE:
input("qual o valor de X ? ")
input(" qual o valor de Y ? ")
print(X)
print(Y)
print(X//Y)
print(X%Y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(X)
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 22:01:00) 
-- CODE:
input("qual o valor de X ? ")
input(" qual o valor de Y ? ")
print(X)
print(Y)
print(X//Y)
print(X%Y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(X)
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 22:03:20) 
-- CODE:
input("qual o valor de X ? ")
input(" qual o valor de Y ? ")
print(X*1)
print(Y*1)
print(X//Y)
print(X%Y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(X*1)
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 22:03:58) 
-- CODE:
int(input("qual o valor de X ? "))
int(input(" qual o valor de Y ? "))
print(X*1)
print(Y*1)
print(X//Y)
print(X%Y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(X*1)
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 22:08:40) 
-- CODE:
input("qual o valor de X ? "))
input(" qual o valor de Y ? "))
print(int(X))
print(int(Y))
print(X//Y)
print(X%Y)
-- ERROR:
File "XXXX", line 1
    input())
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 22:08:54) 
-- CODE:
input("qual o valor de X ? ")
input(" qual o valor de Y ? ")
print(int(X))
print(int(Y))
print(X//Y)
print(X%Y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(int(X))
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 22:10:53) 
-- CODE:
input("qual o valor de X ? ")
input(" qual o valor de Y ? ")
print(float(X))
print(int(Y))
print(X//Y)
print(X%Y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(float(X))
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 22:20:16) 
-- CODE:
input("qual o valor de X ? ")
input(" qual o valor de Y ? ")
total = X
print(X)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = X
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 22:20:32) 
-- CODE:
input("qual o valor de X ? ")
input(" qual o valor de Y ? ")
total = X*1
print(X)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = X*1
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 22:20:59) 
-- CODE:
input("qual o valor de x ? ")
input(" qual o valor de y ? ")
total = x*1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = x*1
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 22:21:39) 
-- CODE:
int(input("qual o valor de x ? "))
int(input(" qual o valor de y ? "))
total = x*1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = x*1
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 22:27:58) 
-- CODE:
int(input("qual o valor de x ? "))
int(input(" qual o valor de y ? "))
print"x"
-- ERROR:
File "XXXX", line 3
    print"x"
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 22:28:09) 
-- CODE:
int(input("qual o valor de x ? "))
int(input(" qual o valor de y ? "))
print("x")
-- OUTPUT:
x
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 22:29:44) 
-- CODE:
int(input("qual o valor de x ? "))
int(input(" qual o valor de y ? "))
var1 = (x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var1 = (x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 22:29:53) 
-- CODE:
int(input("qual o valor de x ? "))
int(input(" qual o valor de y ? "))
var1 = (x*1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var1 = (x*1)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 22:30:08) 
-- CODE:
input("qual o valor de x ? "))
input(" qual o valor de y ? "))
var1 = (x*1)
-- ERROR:
File "XXXX", line 1
    input())
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 22:30:19) 
-- CODE:
input("qual o valor de x ? ")
input(" qual o valor de y ? ")
var1 = (x*1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var1 = (x*1)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 23:02:12) 
-- CODE:
input("qual o valor de x ? ")
input(" qual o valor de y ? ")
var1 = (x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var1 = (x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 23:02:42) 
-- CODE:
input("qual o valor de x ? ")
input(" qual o valor de y ? ")
print("você digitou", var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("você digitou", var)
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 23:03:04) 
-- CODE:
input("qual o valor de x ? ")
input(" qual o valor de y ? ")
var = x 
print("você digitou", var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var = x 
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 23:05:09) 
-- CODE:
x = input("qual o valor de x ? ")
y = input(" qual o valor de y ? ")
print("você digitou", var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("você digitou", var)
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 23:05:22) 
-- CODE:
x = input("qual o valor de x ? ")
y = input(" qual o valor de y ? ")
print("você digitou", x)
-- OUTPUT:
você digitou 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 23:05:41) 
-- CODE:
x = input("qual o valor de x ? ")
y = input(" qual o valor de y ? ")
print(x)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 23:06:20) 
-- CODE:
x = input("qual o valor de x ? ")
y = input(" qual o valor de y ? ")
print(x)
print(y)
-- OUTPUT:
8
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 23:06:59) 
-- CODE:
x = input("qual o valor de x ? ")
y = input(" qual o valor de y ? ")
print(x)
print(y)
print(x//y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(x//y)
TypeError: unsupported operand type(s) for //: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 23:07:15) 
-- CODE:
x = input("qual o valor de x ? ")
y = input(" qual o valor de y ? ")
print(x)
print(y)
print(x/y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(x/y)
TypeError: unsupported operand type(s) for /: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 23:08:10) 
-- CODE:
x = input("qual o valor de x ? ")
y = input(" qual o valor de y ? ")
print(x)
print(y)
print(int(x/y))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(int(x/y))
TypeError: unsupported operand type(s) for /: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 23:08:45) 
-- CODE:
x = input("qual o valor de x ? ")
y = input(" qual o valor de y ? ")
print(x)
print(y)
print(float(x//y))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(float(x//y))
TypeError: unsupported operand type(s) for //: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 23:18:15) 
-- CODE:
int(input("qual o valor de x ? "))
int(input(" qual o valor de y ? "))
print(x)
print(y)
print(x//y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 00:05:20) 
-- CODE:
int(input("qual o valor de x ? "))
int(input(" qual o valor de y ? "))
print(int(x))
print(y)
print(x//y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(int(x))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 00:22:11) 
-- CODE:
X = int(input("qual o valor de x ? "))
Y = int(input(" qual o valor de y ? "))
print(X)
print(Y)
print(X//Y)
print(X%Y)
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 00:22:34) 
-- CODE:
X = int(input("qual o valor de x ? "))
Y = int(input(" qual o valor de y ? "))
print(X)
print(Y)
print(X//Y)
print(X%Y)
-- EXECUTION TIME:
0.137058
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
